fix: footer logo location fix: menu bar font weight feat: add gap in services section2 卡片之间距离

--- a/web/css/services.css
+++ b/web/css/services.css
@@ -65,7 +65,11 @@
 }
 
 
-
+.section-two {
+    display: flex;
+    flex-direction: column;
+    gap: 40px
+}
 
 .section-two-wrapper {
     display: flex;
@@ -169,7 +173,9 @@
 
 
 
-
+.section-four {
+    margin: 100px 0px;
+}
 
 .row-flex.section-four-wrapper {
     display: flex;
